# nexusrt

./: .coveragerc  .gitignore  BENCHMARKS.md  LICENSE  README.md  conftest.py  pytest.ini
.github/workflows/: manual-artifacts.yml
config/: hardware.yaml  pipeline.yaml  runtime.yaml
docs/: README.md  api_reference.md  architecture.md  conf.py  index.rst  research.md
docs/hardware_profiles/: a100.yaml  h100.yaml  m1pro.yaml
include/firmware/: cuda_kernels.cuh
packaging/: CMakeLists.txt  README.md  nexusrt.pc.in  pyproject.toml
packaging/setup_hooks/: check_no_framework_imports.sh  ci.yml  post_test_coverage.sh  pre-commit-config.yaml  run_benchmarks.sh  run_leak_audit.sh
python/nexusrt/: __init__.py  _abi.py  cli_bench.py  cli_run.py  config.py  firmware.py  memory.py  pipeline.py  platform.py  scheduler.py  token_opt.py
src/firmware/: CMakeLists.txt  boot.cpp  boot.hpp  context.cpp  context.hpp  cuda_driver_shim.cu  dma_engine.cpp  dma_engine.hpp  fault_handler.cpp  fault_handler.hpp  ilc_allocations.cu  ilc_manager.cpp  ilc_manager.hpp  metal_shim.mm  microkernel.cpp  microkernel.hpp  selftest.cpp  tma_descriptor.cu  tma_engine.cpp  tma_engine.hpp  types.hpp
src/memory/: CMakeLists.txt  coalescer.cpp  coalescer.hpp  gds_router.cpp  grdma_router.cpp  manager.cpp  manager.hpp  page_table.cpp  page_table.hpp  selftest.cpp
src/pipeline/: CMakeLists.txt  infer.cpp  infer.hpp  orchestrator.cpp  orchestrator.hpp  postprocess.cpp  postprocess.hpp  preprocess.cpp  preprocess.hpp  selftest.cpp  train.cpp  train.hpp
src/pipeline/kernels/: decode_kernel.cu  detokenize_kernel.cu  tokenize_kernel.cu  transformer_kernel.cu
src/platform/: CMakeLists.txt  abi.h  abi_stubs.cpp  cuda_driver_loader.cpp  cuda_include.h  dispatch.cpp  dispatch.hpp  metal_loader.mm
src/scheduler/: CMakeLists.txt  graph.cpp  graph.hpp  selftest.cpp  stream_pool.cpp  stream_pool.hpp  warp_specialization.cpp  warp_specialization.hpp
src/token_opt/: CMakeLists.txt  kv_cache.cpp  kv_cache.hpp  prefetcher.cpp  prefetcher.hpp  scope.cpp  scope.hpp  selftest.cpp
tests/kaggle/: 01_gpu_detection_bench.ipynb  02_memory_paging_test.ipynb  03_token_efficiency.ipynb  04_pipeline_end2end.ipynb  README.md
tests/kaggle/results/: 01_gpu_detection_bench.logs.json  02_memory_paging_test.logs.json  03_token_efficiency.logs.json  04_pipeline_end2end.logs.json  README.md
tests/mac_unified/: 01_unified_memory_coherence.ipynb  02_token_pipeline_mps.ipynb  platform_check.py
tests/unit/: CMakeLists.txt  conftest.py  test_firmware.cpp  test_memory.cpp  test_python_bindings.py  test_scheduler.cpp  test_token_opt.cpp
